MINOR remove unnecessary id

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <hr>
 
-        <table class = 'table text-center' id = 'tableStyle'>
+        <table class = 'table text-center'>
           <tr >
             <div ng-show = 'ctrl.notesTable.length <= 0' class = 'no-notes'>NO NOTES</div>
           </tr>
